--- a/src/app/question-form/question-form.component.html
+++ b/src/app/question-form/question-form.component.html
@@ -1,89 +1,90 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="questionForm">
-  <div>
-    <label for="question">Question:</label>
+<div class="container">
+  <form (ngSubmit)="onSubmit()" [formGroup]="questionForm" class="glass-container">
+    <h2>Question number {{ questionNumber }}</h2>
+    <div class="input-group">
+      <label for="description">Question:</label>
 
-    <input formControlName="question"
-           id="question"
-           type="text">
-  </div>
+      <textarea formControlName="description" id="description"></textarea>
+    </div>
 
-  <div>
-    <label for="type">Answer type:</label>
-    <select (change)="onTypeChange()" formControlName="type" id="type">
-      <option value="text">Text</option>
+    <div class="input-group">
+      <label for="type">Answer type:</label>
+      <select (change)="onTypeChange()" formControlName="type" id="type">
+        <option value="text">Text</option>
 
-      <option value="number">Number</option>
+        <option value="number">Number</option>
 
-      <option value="date">Date</option>
+        <option value="date">Date</option>
 
-      <option value="pin">PIN</option>
-    </select>
-  </div>
+        <option value="pin">PIN</option>
+      </select>
+    </div>
 
-  <div *ngIf="selectedType === 'text'">
-    <label for="answerText">Text Answer:</label>
+    <div *ngIf="selectedType === 'text'" class="input-group">
+      <label for="answerText">Text Answer:</label>
 
-    <input [maxlength]="questionForm.get('textMaxLength')?.value"
-           formControlName="answerText"
-           id="answerText"
-           type="text">
+      <input [maxlength]="questionForm.get('textMaxLength')?.value"
+             formControlName="answerText"
+             id="answerText"
+             type="text">
 
-    <label for="textMaxLength">Max Text Length:</label>
+      <label for="textMaxLength">Max Text Length:</label>
 
-    <input formControlName="textMaxLength"
-           id="textMaxLength"
-           type="number">
-  </div>
+      <input formControlName="textMaxLength"
+             id="textMaxLength"
+             type="number">
+    </div>
 
-  <div *ngIf="selectedType === 'number'">
-    <label for="answerNumber">Number Answer:</label>
+    <div *ngIf="selectedType === 'number'" class="input-group">
+      <label for="answerNumber">Number Answer:</label>
 
-    <input (blur)="validateMaxNumber()"
-           [max]="questionForm.get('maxNumber')?.value"
-           formControlName="answerNumber"
-           id="answerNumber"
-           type="number">
+      <input (blur)="validateMaxNumber()"
+             [max]="questionForm.get('maxNumber')?.value"
+             formControlName="answerNumber"
+             id="answerNumber"
+             type="number">
 
-    <label for="maxNumber">Max Number Value:</label>
+      <label for="maxNumber">Max Number Value:</label>
 
-    <input formControlName="maxNumber"
-           id="maxNumber" min="1"
-           type="number">
-  </div>
+      <input formControlName="maxNumber"
+             id="maxNumber" min="1"
+             type="number">
+    </div>
 
-  <div *ngIf="selectedType === 'date'">
-    <label for="answerDate">Date Answer:</label>
+    <div *ngIf="selectedType === 'date'" class="input-group">
+      <label for="answerDate">Date Answer:</label>
 
-    <input formControlName="answerDate"
-           id="answerDate"
-           type="date">
-  </div>
+      <input formControlName="answerDate"
+             id="answerDate"
+             type="date">
+    </div>
 
-  <div *ngIf="selectedType === 'pin'">
-    <label for="pin">PIN:</label>
+    <div *ngIf="selectedType === 'pin'" class="input-group">
+      <label for="pin">PIN:</label>
 
-    <input (input)="filterPinInput($event)"
-           [maxlength]="questionForm.get('pinLength')?.value"
-           [pattern]="pinPattern"
-           formControlName="pin" id="pin"
-           type="text">
+      <input (input)="filterPinInput($event)"
+             [maxlength]="questionForm.get('pinLength')?.value"
+             [pattern]="pinPattern"
+             formControlName="pin" id="pin"
+             type="text">
 
-    <label for="pinLength">Number of Digits in PIN (3-8):</label>
+      <label for="pinLength">Number of Digits in PIN (3-8):</label>
 
-    <input (blur)="validateMaxPinLength()"
-           (change)="validateMaxPinLength()"
-           formControlName="pinLength"
-           id="pinLength"
-           max="8"
-           min="3"
-           type="number">
-  </div>
+      <input (blur)="validateMaxPinLength()"
+             (change)="validateMaxPinLength()"
+             formControlName="pinLength"
+             id="pinLength"
+             max="8"
+             min="3"
+             type="number">
+    </div>
 
-  <div class="navigation-buttons">
-    <button (click)="onNextQuestion()" type="button">
-      Next Question
-    </button>
+    <div class="navigation-buttons">
+      <button (click)="onNextQuestion()" type="button">
+        Next Question
+      </button>
 
-    <button type="submit">Submit</button>
-  </div>
-</form>
+      <button type="submit">Submit</button>
+    </div>
+  </form>
+</div>
