--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,3 +184,7 @@ html, body {
     opacity: 0.7;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
