login and register form interface

--- a/src/app/styles/_config.scss
+++ b/src/app/styles/_config.scss
@@ -29,3 +29,9 @@ BORDER RADIUS
 
 $DEFAULT_BORDER_RADIUS: 15px;
 $DEFAULT_BORDER_RADIUS_LOWEST: 5px;
+
+/*
+GAPS
+ */
+$DEFAULT_GAP_GREATER: 2rem;
+$DEFAULT_GAP: 1rem;
