--- a/src/app/question-form/question-form.component.scss
+++ b/src/app/question-form/question-form.component.scss
@@ -2,20 +2,16 @@
 @import "../styles/mixin-basics";
 
 .container {
+  @include  flex(column,center,center);
   background: url('/assets/imgs/spaceBackground.png') no-repeat center center fixed;
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
 
   .glass-container {
     @include width-height(30rem, auto);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-    gap: 1rem;
+    @include  flex(column,center,center);
+    padding: $DEFAULT_PAGE_PADDING;
+    gap: $DEFAULT_GAP;
 
     label {
       background: none;
@@ -25,7 +21,7 @@
 
     textarea {
       height: 4rem;
-      font-size: 0.8rem;
+      font-size: $FONT_SIZE_SLIGHTLY_SMALLER;
       max-width: 20rem;
       max-height: 10rem;
       min-width: 20rem;
@@ -39,28 +35,32 @@
       background: rgba(0, 0, 0, 0.05);
       backdrop-filter: blur(15px);
       border: none;
-      border-radius: 5px;
+      border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
       color: white;
-      margin-bottom: 0.5rem;
-      padding: 0.75rem;
+      margin-bottom: $DEFAULT_PAGE_MARGIN_LOWEST;
+      padding: $DEFAULT_PAGE_PADDING_LOWEST;
       width: 90%;
     }
 
     input,
     select {
-      font-size: 1rem;
+      font-size: $FONT_SIZE_DEFAULT;
+    }
+
+    option {
+      color: black;
     }
 
     .input-group {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 1rem;
+      @include  flex(column,center,center);
+      margin-bottom: $DEFAULT_PAGE_MARGIN_LOWER;
       min-width: 8rem;
     }
 
     button {
       cursor: pointer;
       transition: background-color 0.3s;
+
       &:hover {
         background-color: rgba(0, 140, 255, 0.8);
       }
@@ -70,11 +70,8 @@
       display: flex;
       justify-content: space-between;
       width: 90%;
-      gap:2rem;
+      gap: $DEFAULT_GAP_GREATER;
     }
   }
-}
-.custom-snackbar {
-  z-index: 10000; /* Użyj wyższej wartości, aby upewnić się, że jest na wierzchu */
 }
 
