login page communicates with backend, route blocking, JWT

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -67,6 +67,7 @@
         Sign Up
       </button>
     </form>
+    <div *ngIf="loginError" class="error">{{ loginError }}</div>
   </div>
 
 </div>
