--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -19,7 +19,7 @@
 
   <div class="glass-container">
     <h2>Create Hidden Message</h2>
-    <button id="createMessageBtn">Create</button>
+    <button id="createMessageBtn" (click)="create()">Create</button>
   </div>
 
 </div>
