--- a/src/app/styles/glass.styles.scss
+++ b/src/app/styles/glass.styles.scss
@@ -3,7 +3,7 @@
 @import "../styles/colors";
 
 .glass-container {
-  background: $color-grey-glass;
+  background: $COLOR-GREY-GLASS;
   border-radius: $DEFAULT_BORDER_RADIUS;
   backdrop-filter: blur(5px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -14,15 +14,15 @@
 
 .glass-container h2 {
   margin-top: 0;
-  color: $color-text;
+  color: $COLOR-TEXT;
 }
 
 .glass-container button {
-  background: $color-secondary;
+  background: $COLOR-SECONDARY;
   backdrop-filter: blur(15px);
   border: none;
   border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
-  color: $color-text;
+  color: $COLOR-TEXT;
   margin-bottom: $DEFAULT_PAGE_MARGIN_LOWEST;
   padding: $DEFAULT_PAGE_PADDING_LOWEST;
   width: 90%;
@@ -30,6 +30,6 @@
   transition: background-color 0.3s;
 
   &:hover {
-    background-color: $color-hover;
+    background-color: $COLOR-HOVER;
   }
 }
