--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -8,11 +8,11 @@
   width: 30rem;
   height: 10rem;
   max-width: 80%;
-}
 
-.glass-container button {
-  max-width: 15rem;
-  min-width: 10rem;
+  button {
+    max-width: 15rem;
+    min-width: 10rem;
+  }
 }
 
 
