--- a/src/app/question-form/question-form.component.scss
+++ b/src/app/question-form/question-form.component.scss
@@ -1,5 +1,6 @@
 @import "../styles/glass.styles.scss";
 @import "../styles/mixin-basics";
+@import "../styles/colors";
 
 .container {
   @include  flex(column,center,center);
@@ -15,7 +16,7 @@
 
     label {
       background: none;
-      color: white;
+      color: $COLOR-TEXT;
     }
 
 
@@ -32,11 +33,11 @@
     input,
     select,
     button {
-      background: rgba(0, 0, 0, 0.05);
+      background: $COLOR-SECONDARY;
       backdrop-filter: blur(15px);
       border: none;
       border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
-      color: white;
+      color: $COLOR-TEXT;
       margin-bottom: $DEFAULT_PAGE_MARGIN_LOWEST;
       padding: $DEFAULT_PAGE_PADDING_LOWEST;
       width: 90%;
@@ -48,7 +49,7 @@
     }
 
     option {
-      color: black;
+      color: $COLOR-OPTION;
     }
 
     .input-group {
@@ -62,7 +63,7 @@
       transition: background-color 0.3s;
 
       &:hover {
-        background-color: rgba(0, 140, 255, 0.8);
+        background-color: $COLOR-HOVER;
       }
     }
 
