--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -6,3 +6,4 @@ $COLOR-TEXT: white;
 $COLOR-DISABLED: #ccc;
 $COLOR-HOVER: rgba(0, 140, 255, 0.8);
 $COLOR-GREY-GLASS: rgba(255, 255, 255, 0.15);
+$COLOR-OPTION: black;
