--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,73 +1,43 @@
-<div class="gradient-bg">
-  <svg xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <filter id="goo">
-        <feGaussianBlur in="SourceGraphic"
-                        result="blur"
-                        stdDeviation="10"/>
+<app-interactive-background></app-interactive-background>
 
-        <feColorMatrix in="blur"
-                       mode="matrix"
-                       result="goo"
-                       values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8"/>
+<div class="glass-container">
+  <form (ngSubmit)="onSubmit()"
+        [formGroup]="loginForm"
+        class="login-form">
 
-        <feBlend in="SourceGraphic"
-                 in2="goo"/>
-      </filter>
-    </defs>
-  </svg>
+    <div class="form-group">
+      <label for="username">
+        {{ labels.usernameLabel }}
+      </label>
 
-  <div class="gradients-container">
-    <div class="g1"></div>
+      <input formControlName="username"
+             id="username"
+             required
+             type="text">
+    </div>
 
-    <div class="g2"></div>
+    <div class="form-group">
+      <label for="password">
+        {{ labels.passwordLabel }}
+      </label>
+      <input formControlName="password"
+             id="password"
+             required
+             type="password">
+    </div>
 
-    <div class="g3"></div>
+    <button class="submit-button"
+            type="submit">
+      {{ labels.signInButton }}
+    </button>
 
-    <div class="g4"></div>
-
-    <div class="g5"></div>
-
-    <div class="interactive"></div>
+    <button (click)="navigateToRegister()"
+            class="register-button">
+      {{ labels.signUpButton }}
+    </button>
+  </form>
+  <div [style.visibility]="loginError ? 'visible' : 'hidden'"
+       class="error">
+    {{ loginError }}
   </div>
-
-  <div class="glass-container">
-    <form (ngSubmit)="onSubmit()"
-          [formGroup]="loginForm"
-          class="login-form">
-
-      <div class="form-group">
-        <label for="username">
-          Username
-        </label>
-
-        <input formControlName="username"
-               id="username"
-               required
-               type="text">
-      </div>
-
-      <div class="form-group">
-        <label for="password">
-          Password
-        </label>
-        <input formControlName="password"
-               id="password"
-               required
-               type="password">
-      </div>
-
-      <button class="submit-button"
-              type="submit">
-        Sign In
-      </button>
-
-      <button (click)="navigateToRegister()"
-              class="register-button">
-        Sign Up
-      </button>
-    </form>
-    <div *ngIf="loginError" class="error">{{ loginError }}</div>
-  </div>
-
 </div>
