--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,25 +1,12 @@
-<div class="gradient-bg">
-  <svg xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <filter id="goo">
-        <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo" />
-        <feBlend in="SourceGraphic" in2="goo" />
-      </filter>
-    </defs>
-  </svg>
-  <div class="gradients-container">
-    <div class="g1"></div>
-    <div class="g2"></div>
-    <div class="g3"></div>
-    <div class="g4"></div>
-    <div class="g5"></div>
-    <div class="interactive"></div>
-  </div>
+<app-interactive-background></app-interactive-background>
 
-  <div class="glass-container">
-    <h2>Create Hidden Message</h2>
-    <button id="createMessageBtn" (click)="create()">Create</button>
-  </div>
+<div class="glass-container">
+  <h2>
+    {{labels.createH2}}  </h2>
 
+  <button (click)="create()"
+          id="createMessageBtn">
+    {{labels.createButton}}
+  </button>
 </div>
+
