--- a/src/app/puzzle-solver/puzzle-solver.component.scss
+++ b/src/app/puzzle-solver/puzzle-solver.component.scss
@@ -3,14 +3,14 @@
 @import "../styles/colors";
 
 .container {
-  @include  flex(column,center,center);
+  @include flex(column, center, center);
   background: url('/assets/imgs/spaceBackground.png') no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
 
   .glass-container {
     @include width-height(30rem, auto);
-    @include  flex(column,center,center);
+    @include flex(column, center, center);
     padding: $DEFAULT_PAGE_PADDING;
     gap: $DEFAULT_GAP;
     color: $COLOR-TEXT;
@@ -19,21 +19,10 @@
       background: none;
     }
 
-
-    textarea {
-      height: 4rem;
-      font-size: $FONT_SIZE_SLIGHTLY_SMALLER;
-      max-width: 20rem;
-      max-height: 10rem;
-      min-width: 20rem;
-      min-height: 10rem;
-    }
-
-    textarea,
     input,
     select,
     button {
-      background: rgba(0, 0, 0, 0.05);
+      background: $COLOR-SECONDARY;
       backdrop-filter: blur(15px);
       border: none;
       border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
@@ -49,12 +38,20 @@
     }
 
     .pin-container {
-      display: flex;
-      gap: 10px; /* Dostosuj według potrzeb */
-    }
+      @include flex(row, center, center);
+      gap: $DEFAULT_GAP_SMALLER;
 
-    .pin-container input {
-      width: 40px; /* Dostosuj szerokość dla pojedynczego pola PIN */
+      .filled-input {
+        border: 2px solid $COLOR-HOVER;
+      }
+
+      input {
+        text-align: center;
+        font-size: $FONT_SIZE_LARGER;
+        width: 2rem;
+        height: 2rem;
+        border: 2px solid transparent;
+      }
     }
 
     button {
@@ -62,7 +59,7 @@
       transition: background-color 0.3s;
 
       &:hover {
-        background-color: rgba(0, 140, 255, 0.8);
+        background-color: $COLOR-HOVER;
       }
     }
 
