--- a/src/app/message-form/message-form.component.scss
+++ b/src/app/message-form/message-form.component.scss
@@ -97,7 +97,22 @@
         }
       }
     }
-
+    .message-link-container {
+      @include flex(column,center,center);
+      a {
+        background: $COLOR-SECONDARY;
+        backdrop-filter: blur(15px);
+        border: none;
+        border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
+        color: $COLOR-TEXT;
+        margin-bottom: $DEFAULT_PAGE_MARGIN;
+        padding: $DEFAULT_PAGE_PADDING_LOWEST;
+        transition: color 0.3s;
+        &:hover{
+          color: $COLOR-HOVER;
+        }
+      }
+    }
     button {
       cursor: pointer;
       transition: background-color 0.3s;
