--- a/src/app/puzzle-solver/puzzle-solver.component.scss
+++ b/src/app/puzzle-solver/puzzle-solver.component.scss
@@ -2,73 +2,70 @@
 @import "../styles/mixin-basics";
 @import "../styles/colors";
 
-.container {
-  @include flex(column, center, center);
-  background: url('/assets/imgs/spaceBackground.png') no-repeat center center fixed;
-  background-size: cover;
-  min-height: 100vh;
+.glass-container {
 
-  .glass-container {
-    @include width-height(30rem, auto);
-    @include flex(column, center, center);
-    padding: $DEFAULT_PAGE_PADDING;
-    gap: $DEFAULT_GAP;
+  label {
+    background: none;
+  }
+
+  input,
+  select,
+  button {
+    background: $COLOR-SECONDARY;
+    backdrop-filter: blur(15px);
+    border: none;
+    border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
     color: $COLOR-TEXT;
+    margin-bottom: $DEFAULT_PAGE_MARGIN_LOWEST;
+    padding: $DEFAULT_PAGE_PADDING_LOWEST;
+    width: 90%;
+  }
 
-    label {
-      background: none;
+  input,
+  select {
+    font-size: $FONT_SIZE_DEFAULT;
+  }
+
+  .pin-container {
+    @include flex(row, center, center);
+    gap: $DEFAULT_GAP_SMALLER;
+
+    .filled-input {
+      border: 2px solid $COLOR-HOVER;
     }
 
-    input,
-    select,
-    button {
-      background: $COLOR-SECONDARY;
-      backdrop-filter: blur(15px);
-      border: none;
-      border-radius: $DEFAULT_BORDER_RADIUS_LOWEST;
-      color: $COLOR-TEXT;
-      margin-bottom: $DEFAULT_PAGE_MARGIN_LOWEST;
-      padding: $DEFAULT_PAGE_PADDING_LOWEST;
-      width: 90%;
-    }
-
-    input,
-    select {
-      font-size: $FONT_SIZE_DEFAULT;
-    }
-
-    .pin-container {
-      @include flex(row, center, center);
-      gap: $DEFAULT_GAP_SMALLER;
-
-      .filled-input {
-        border: 2px solid $COLOR-HOVER;
-      }
-
-      input {
-        text-align: center;
-        font-size: $FONT_SIZE_LARGER;
-        width: 2rem;
-        height: 2rem;
-        border: 2px solid transparent;
-      }
-    }
-
-    button {
-      cursor: pointer;
-      transition: background-color 0.3s;
-
-      &:hover {
-        background-color: $COLOR-HOVER;
-      }
-    }
-
-    .navigation-buttons {
-      display: flex;
-      justify-content: space-between;
-      width: 90%;
-      gap: $DEFAULT_GAP_GREATER;
+    input {
+      text-align: center;
+      font-size: $FONT_SIZE_LARGER;
+      width: 2rem;
+      height: 2rem;
+      border: 2px solid transparent;
     }
   }
+
+  button {
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: $COLOR-HOVER;
+    }
+  }
+
+  .navigation-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    gap: $DEFAULT_GAP_GREATER;
+  }
+}
+.glass-container-completed {
+  overflow: auto;
+  max-height: 80%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
