--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -7,3 +7,5 @@ $COLOR-DISABLED: #ccc;
 $COLOR-HOVER: rgba(0, 140, 255, 0.8);
 $COLOR-GREY-GLASS: rgba(255, 255, 255, 0.15);
 $COLOR-OPTION: black;
+$COLOR-SCROLL-UNACTIVE: rgba(0,0,0,0.2);
+$COLOR_SCROLL-ACTIVE: rgba(0,0,0,0.3)
