--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
+@import "app/styles/colors";
+
 html, body {
   font-family: 'Dongle', sans-serif;
   margin: 0;
   padding: 0;
-  height: 100%; }
+  height: 100%;
+}
 
 :root {
   --color-bg1: rgb(23, 3, 66);
@@ -69,7 +72,7 @@ html, body {
 
 
   .gradients-container {
-    filter: url(#goo) blur(40px) ;
+    filter: url(#goo) blur(40px);
     width: 100%;
     height: 100%;
   }
@@ -166,10 +169,63 @@ html, body {
     opacity: 0.7;
   }
 }
+
 html, body {
   font-family: 'Dongle', sans-serif;
   margin: 0;
   padding: 0;
-  height: 100%; }
+  height: 100%;
+}
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url('/assets/imgs/blobbackground.jpg') no-repeat center center fixed;
+  background-size: cover;
+  min-height: 100vh;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $COLOR_SCROLL-UNACTIVE;
+  border: 50px none #ffffff;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $COLOR-HOVER;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: $COLOR-PRIMARY-DARKER;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0);
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: rgba(0,0,0,0);
+}
+
+::-webkit-scrollbar-track:active {
+  background: $COLOR-SCROLL-ACTIVE;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 
